# fdroid-metrics-dashboard

./: .gitignore  Dockerfile  LICENCE.TXT  README.md  dashboard.py  extract_monthly_package_json.py  pyproject.toml  update_total_package_json.py
.github/workflows/: extract_monthly_package_json.yml  extract_package_json.yml
etl/: README.md  __init__.py  analyzer_apps.py  analyzer_search.py  config.py  dashboard.py  data_fetcher.py  data_fetcher_ui.py  fdroid_metadata.py  getdata_apps.py  getdata_search.py  pyproject.toml  query_mapper.py  security.py
etl/search/: analyzer.py
pages/: 01_Search_Metrics.py  03_Package_Details.py  __init__.py  app_badges.py  app_metrics.py  apps.py  package_details.py  search.py  search_metrics.py
processed/monthly/: An.stop.json  InfinityLoop1309.NewPipeEnhanced.json  S.N.A.K.E.json  SVS.pdfinspector.json  a2dp.Vol.json  ac.mdiq.podcini.X.json  ac.robinson.mediaphone.json  acab.naiveha.subrosa.json  acidburn.stims.json  acr.browser.lightning.json  ademar.bitac.json  ademar.textlauncher.json  agersant.polaris.json  agrigolo.chubbyclick.json  agrigolo.opendrummer.json  ai.agent1c.hitomi.open.json  ai.privatebydesign.albi.json  ai.susi.json  akk.astro.droid.moonphase.json  allen.town.focus.mastodon.json  allen.town.focus.podcast.json  alt.nainapps.aer.json  alt.nainapps.sharepaste.fdroid.json  amirz.dngprocessor.json  amirz.rootless.nexuslauncher.json  androdns.android.leetdreams.ch.androdns.json  anupam.acrylic.json  (+4130 more)
search/: __init__.py  getdata.py
test/: test_metadata.py  test_properties.py  test_security.py
views/: apps.py  package_details.py  search.py
(+4815 files in other folders)
