[project]
name = "fdroid-metrics"
version = "0.1.0"
description = "Process data from F-droid metrics website for analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "pandas>=3.0.0",
    "plotly>=5.0.0",
    "streamlit>=1.56.0",
    "pyyaml>=6.0.0",
    "rapidfuzz>=3.14.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
]

[tool.ruff.lint]
extend-select = [
    "ANN", # type annotations
    "UP",  # pyupgrade
    "PLE", # pylint errors
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = ["ANN"]
