[project]
name = "python-template"
version = "0.1.0"
description = "Process data from F-droid metrics website for analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = ["ruff>=0.11.2"]
